Completion of the implementation of the engineer's and the task's operations.

--- a/DalFacade/DalFacade.csproj
+++ b/DalFacade/DalFacade.csproj
@@ -12,4 +12,8 @@
 	  <RootNamespace />
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Stage0\Stage0.csproj" />
+  </ItemGroup>
+
 </Project>
